# obs-mcp

./: .gitignore  README.md  pyproject.toml
obs_mcp/: __init__.py  __main__.py  blur.py  camera_mix.py  compositor.py  config.py  graphics.py  obs_client.py  server.py  studio.py  studio_learn.py  timeline.py  ws.py
